fix: fix padding on mobile display

--- a/src/scss/centering/_centering.scss
+++ b/src/scss/centering/_centering.scss
@@ -16,6 +16,6 @@
 
 @media (max-width: 768px) {
     .centering{
-        padding: 0 30px;
+        padding: 0 15px;
     }
 }
