--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
 
     &__menu{
-        padding-top: 35px;
+        padding-top: 15px;
     }
     &__heading{
         margin-top: 60px;
