--- a/src/scss/section-title/_section-title.scss
+++ b/src/scss/section-title/_section-title.scss
@@ -11,7 +11,6 @@
     &__dash{
         margin-left: 15px;
         width: 35px;
-        height: 100%;
     }
 }
 
